# NITA-control

./: .gitignore  CMakeLists.txt  main.cpp  Мысли о формате.txt  Оптимизация.txt  Формат.txt
Optimization program/: Flow.cpp  Flow.h
Optimization program/Errors/: Errors.h
Optimization program/Fields of Zone/: Fields of Flow.cpp  Fields of Flow.h
Optimization program/Measure units/: Measure units.cpp  Measure units.h
Optimization program/Read/: Read.cpp  Read.h
Optimization program/Source information/Points/: Flow-Test-Points.txt  For Test.xlsx  Koltsovo.txt  Test.txt  Test00.txt  Test02.txt  Test03.txt  Test04.txt  Test07.txt
Optimization program/Source information/Schemes/: Flow-Test-Schemes.txt  Koltsovo.txt  Test00.txt  Test01.txt  Test02.txt  Test03.txt  Test04.txt  Test05.txt  Test06.txt  Test07.txt
Optimization program/Tools/: Tools.cpp  Tools.h
